# Essivi

./: .gitignore  BACKEND_ANALYSIS.md  Dockerfile  db.sqlite3  docker-compose.yml  essivi_custom_collection.json  generate_postman_collection.py  manage.py  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
Essivi/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: apps.py  backends.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
accounts/management/commands/: create_test_admin.py
accounts/migrations/: 0001_initial.py
docs/: accounts.md  auth.json  info.md  test-results.md
logistics/: admin.py  models.py  serializers.py  urls.py  views.py
logistics/migrations/: 0001_initial.py  0002_alter_agentcommercial_date_embauche.py
